@@ -14,6 +14,8 @@ v7.1.0:
 - new download link for Newer Falling Leaf
 - fix download link for Midi's Super Mario Wii
 - fix download link for Newer Apocalypse
+- New Super Mario Bros. Wii character mod: allow only restoring
+  original characters without further changes
 - update nsmbw.db
 
 ::game additions
